--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
   },
   "author": "neverm1ndo",
   "license": "MIT",
+  "private": true,
   "_moduleAliases": {
     "@game": "dist/"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^3.2.5",
     "ts-loader": "^9.3.1",
+    "typescript-eslint": "^7.8.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
